<resources>
    <string name="app_name">Anime List</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="icon_back">Navigate Back</string>
    <string name="icon_search">Search</string>
    <string name="search_anime">Search Anime</string>
    <string name="profile_name">Iman Mustika Ismail</string>
    <string name="profile_email">imanmustika02@gmail.com</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="error">Ups.. Something went wrong!</string>
    <string name="home_page">home_page</string>
    <string name="about_page">about_page</string>
</resources>